--- a/Cod-Flix-main/js/css/estilo.css
+++ b/Cod-Flix-main/js/css/estilo.css
@@ -1,9 +1,209 @@
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
+    
     background-color: black;
 }
 h1{
     color: #fc5203;
+    position: absolute;
+    left: 15px;
+    top: 15px;
 }
 .cor1{
     background-color: #fc5203;
 }
+
+.navegaçao{
+    width: 100%;
+    height: 150x;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.navegaçao ul{
+width: 350px;
+display: flex;
+align-items: center
+
+}
+.navegaçao ul li{
+    width: 300px;
+    height: 80px;
+    list-style-type: none;
+    position: relative;
+    z-index: 1;
+}
+
+.navegaçao ul li a{
+ width: 100%;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ flex-direction: column;
+ text-decoration: none;
+ font-weight: 600;
+ position: relative;
+}
+
+.navegaçao ul li a .icone{
+    display: block;
+    line-height: 75px;
+    font-size: 30px;
+    color: #fc5203;
+    position: relative;
+    transition: .5s;
+}
+.navegaçao ul li a .texto{
+    color: black;
+    position: absolute;
+    opacity: 0;
+    transition: .5s;
+    transform: translateY(20px);
+}
+.navegaçao ul li:hover a .icone{
+   transform: translateY(-35px);
+   color: aliceblue;
+}
+
+.navegaçao ul li:hover a .texto{
+    opacity: 1;
+    transform: translateY(10px) ;
+    color: aliceblue;
+}
+
+body{
+    height: 40px;
+    background-color: black;
+    align-items: center;
+   justify-content: center;
+}
+
+.buscar-box{
+    width: 400px;
+    height: 80px;
+    background-color: white;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: .5s;
+    z-index: 999;
+}
+
+.buscar-box.ativar{
+    width: 400px;
+}
+
+.buscar-box .lupa-buscar, .buscar-box .btn-fechar{
+    min-width: 80px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+}
+.buscar-box .btn-fechar{
+    font-size: 25px;
+    margin-left: 15px;
+}
+
+.buscar-box .lupa-buscar i{
+    font-size: 35px;
+}
+
+.buscar-box .input-buscar{
+    position: absolute;
+    left: 80px;
+    width: calc(100%) - 20px;
+    height: 100%;
+    line-height: 80px;
+}
+
+.buscar-box .input-buscar input{
+ border: 0;
+ outline: 0;
+ font-size: 20px;
+}
+
+.filme-principal {
+    font-size: 16px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) 100%) 0% 0% / cover, url('../image/capa-house.jpg');
+}
+.filme-principal .descricao{
+    margin-top: 10px;  
+    color: white;
+    
+}
+.titulo{
+
+    margin-top: 5%;
+    font-size: 40px;
+    font-family: 'Trebuchet MS', Lucida Sans Unicode , Lucida Grande , Lucida Sans, Arial, sans-serif;
+color: white;
+}
+
+.botao{
+    background-color: #fc5203;
+    border: none;
+    color: var(--rosa);
+
+    padding: 15px 30px;
+    margin-right: 10px;
+    font-size: 15px;
+    cursor: pointer;
+    transition: .4s ease all;
+    color: white;
+}
+.botao:hover{
+
+background-color: var(--brabca);
+color: black; 
+
+}
+
+.botao i{
+    margin-right: 3px;
+
+}
+
+.container{
+margin-left: 20px;
+
+}
+
+.filme-principal .container{
+width: 71%;
+margin-top: 5%;
+
+}
+
+
+.box.series{
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
+.carrosel-series{
+    margin-top:7px;
+    margin: 7%;
+    margin-right: 4%;
+    margin-bottom: 5%;     
+}
+
