--- a/código flix/js/css/estilo.css
+++ b/código flix/js/css/estilo.css
@@ -69,6 +69,7 @@ color: white;
 font-weight: 500;
 margin-left: 40px;
 transition: .5s;
+align-items: center;
 }
 
 .navigation .btnLogin-popup:hover{
@@ -213,3 +214,9 @@ h1 {
   right: 0;
   background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, black 100%);
 }
+
+
+
+
+
+
